--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: Jeonsanggi
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+subtitle: "정리노트"
 email: jsg2861@gmail.com
 name: Sanggi Jeon
 description: >
