--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Jeonsanggi
-subtitle: "개발자가 되고 싶어요~!!"
+title: Developer
+subtitle: "배운 것과 공부한 것을 정리하는 습관을 갖자!"
 email: jsg2861@gmail.com
 name: Sanggi Jeon
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  "배운 것과 공부한 것을 정리하는 습관을 갖자!"
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -54,11 +54,9 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
+  - cat: java
+    desc: "Posts describing JAVA."
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 # Social icons and sharing options
 #
@@ -76,16 +74,9 @@ descriptions:
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
 social:
-  - name: Twitter
-    icon: twitter
-    username: jeonsanggi
-    url: 
-    desc: Follow me on Twitter
-    share: true
-
   - name: Facebook
     icon: facebook
-    username: 
+    username:
     url: ""
     desc: Friend me on Facebook
     share: false
@@ -105,17 +96,17 @@ social:
     share: false
 
 
-# Social sharing protocols
-# These are for automatically generating sharing metadata for FB and Twitter
-# OS Protocol is for sharing the source of your site, if you're interested. For more, see osprotocol.com
-protocols:
-    fb_image: "/assets/profile-placeholder.png"
-    fb_image_width: 612
-    fb_image_height: 605
-    fb_image_type: "image/png"
-
-    twitter_image: "/assets/profile-placeholder.png"
-
-    os_repo: "https://github.com/bencentra/centrarium.com"
-    os_rcs_type: "git"
-    os_src: "git@github.com:bencentra/centrarium.com.git"
+# # Social sharing protocols
+# # These are for automatically generating sharing metadata for FB and Twitter
+# # OS Protocol is for sharing the source of your site, if you're interested. For more, see osprotocol.com
+# protocols:
+#     fb_image: "/assets/profile-placeholder.png"
+#     fb_image_width: 612
+#     fb_image_height: 605
+#     fb_image_type: "image/png"
+#
+#     twitter_image: "/assets/profile-placeholder.png"
+#
+#     os_repo: "https://github.com/bencentra/centrarium.com"
+#     os_rcs_type: "git"
+#     os_src: "git@github.com:bencentra/centrarium.com.git"
